@@ -4,6 +4,7 @@ Changelog for current version:
   * Fix infinite loop when "replying to all" if there's an @ without a name after it (a mistake, or a 4sq checking tweet)
   * Add --without-pidgin option to ./configure for building just prpltwtr and not gtkprpltwtr. Note that the prpltwtr.so is now installed in the libpurple plugin directory! Please manually delete the old one from pidgin's plugin directory.
   * Basic favorites support. The action menu is NOT updated, though, after favoriting / unfavoriting a tweet.
+  * Add some useful links to the plugin option menu
 
 Changelog for 0.6.4:
   * Show the error texts from twitter when displaying an error. Should make it easier to understand things like why DMs fail.
